# test_for_centurion

./: .env.example  .gitignore  README.md  config.py  engine.py  main.py  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 6bf0686399eb_initial_migrate.py
src/: engine.py  main.py
src/routers/: category_router.py  product_router.py
src/utils/: db.py  models_orm.py  repositories.py  schemas.py
tests/: conftest.py  test_api.py  test_repo.py
utils/: db.py  decorators.py  entities.py  models_orm.py  repositories.py  schemas.py
