[tool.poetry]
name = "test-for-centurion"
version = "0.1.0"
description = ""
authors = ["Denis Ivanov <dnb8866@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
uvicorn = "^0.32.0"
sqlalchemy = "^2.0.36"
mimesis = "^18.0.0"
httpx = "^0.27.2"
asyncpg = "^0.30.0"
python-dotenv = "^1.0.1"

[tool.poetry.scripts]
start = "src.main:start"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
